# MechanicModules

./: README.txt  index.html
2.x/mechanic_module_arnoldweb2/: AUTHORS.md  CMakeLists.txt  arnold.cfg
2.x/mechanic_module_arnoldweb2/src/: CMakeLists.txt  config.h.in
mechanic_module_arnoldweb/: AUTHORS  CMakeLists.txt  README.txt  arnold.cfg
mechanic_module_arnoldweb/src/: CMakeLists.txt  mechanic_module_arnoldweb.c  mechanic_module_arnoldweb.h  mechanic_module_arnoldweb_lib.c
mechanic_module_hello/: AUTHORS  CMakeLists.txt  LICENSE.txt  README.txt
mechanic_module_hello/src/: CMakeLists.txt  mechanic_module_hello.c  mechanic_module_hello.h
mechanic_module_mandelbrot/: CMakeLists.txt  LICENSE.txt  README.txt
mechanic_module_mandelbrot/src/: CMakeLists.txt  mechanic_module_mandelbrot.c  mechanic_module_mandelbrot.h
